# android-native-cpu-features

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/uberv/nativeapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/uberv/nativeapp/: MainActivity.java  NativeLib.java  NativeWrapper.java
app/src/main/jni/: NativeLib.c  NativeLib.h
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/uberv/nativeapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
